# demimud

./: .gitignore  Cargo.toml  README.md
clicore/: Cargo.toml  README.md  banner.txt  license.txt  notice.txt
clicore/src/: files.rs  main.rs
data/: README.md  basic_area.txt  basic_socials.txt  license.txt  setup.bat  setup.sh
mudlib/: Cargo.toml  README.md  help.txt  help_cli.txt  help_credits.txt  help_demimud.txt  help_emote.txt
mudlib/src/: acting.rs  agent.rs  character.rs  colors.rs  commands.rs  components.rs  entity.rs  file_parser.rs  files.rs  find_entities.rs  import.rs  lib.rs  load.rs  mapper.rs  mobprogs.rs  net.rs  players.rs  socials.rs  state.rs  tick.rs  world.rs
netcore/: Cargo.toml  README.md
netcore/src/: lib.rs  main.rs  net.rs
