[package]
name = "clicore"
version = "0.1.0"
authors = ["Andrei Vasiliu <whyte.vuhuni@gmail.com>"]
license = "LGPL-3.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mudlib = { path = "../mudlib", default-features = false }
wasi = "0.10.2"

[features]
default = []
dawn-areas = []
