[package]
name = "mudlib"
version = "0.1.0"
authors = ["whyte"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
netcore = { path = "../netcore" }
# bevy = { version = "0.4", default-features = false }
serde = { version = "1.0", features = ["derive"] }
libtelnet-rs = { path = "../../rust-libtelnet-rs" }
bincode = "1.3"
serde_yaml = "0.8"
Inflector = "0.11"
rand = "0.8"
lazy_static = "1.4"
