[package]
name = "mudlib"
version = "0.1.0"
authors = ["Andrei Vasiliu <whyte.vuhuni@gmail.com>"]
license = "LGPL-3.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["net"]
net = ["netcore", "libtelnet-rs", "bincode"]

[dependencies]
netcore = { path = "../netcore", optional = true }
libtelnet-rs = { version = "1.1", optional = true }
bincode = { version = "1.3", optional = true }
serde = { version = "1.0", features = ["derive"] }
Inflector = "0.11"
rand = "0.8"
lazy_static = "1.4"
string-interner = "0.12"
